force-app/main/default/objects/WorkStep/fields/CoiT_Detail_Work_Step__c.field-meta.xml
<CustomField>
    <fullName>CoiT_Detail_Work_Step__c</fullName>
    <label>Detail Work Step</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>