force-app/main/default/objects/WorkStep/fields/CoIT_Product_Family_Required__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Product_Family_Required__c</fullName>
    <label>Product Family Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acabados de Pisos</fullName>
            </value>
            <value>
                <fullName>Acabado de Techo</fullName>
            </value>
            <value>
                <fullName>Acabados de Muros</fullName>
            </value>
            <value>
                <fullName>Cubiertas</fullName>
            </value>
            <value>
                <fullName>Aseo</fullName>
            </value>
            <value>
                <fullName>Equipos Especiales</fullName>
            </value>
            <value>
                <fullName>Alistamiento</fullName>
            </value>
            <value>
                <fullName>Madera nuevo</fullName>
            </value>
            <value>
                <fullName>Actividades Preliminares</fullName>
                <isActive>false</isActive>
                <label>Actividades Preliminares</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>