force-app/main/default/objects/WorkStep/fields/CoIT_WorkType_Required__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WorkType_Required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type Required</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Steps</relationshipLabel>
    <relationshipName>Work_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>