force-app/main/default/objects/WorkStep/fields/CoIT_WPS_Capture_Method__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WPS_Capture_Method__c</fullName>
    <label>Capture Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Camera Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>