force-app/main/default/objects/WorkStep/fields/CoIT_WPS_Commit_Status__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WPS_Commit_Status__c</fullName>
    <label>Commit Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CoIT_WPS_Commit_Status_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Malo</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>1/4</fullName>
            </value>
            <value>
                <fullName>1/2</fullName>
            </value>
            <value>
                <fullName>3/4</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Superior</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Inferior</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>Asegurado</fullName>
            </value>
            <value>
                <fullName>Tercero</fullName>
            </value>
            <value>
                <fullName>Compartida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>