force-app/main/default/objects/WorkStep/fields/CoIT_WPS_Commit_Status_Control__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WPS_Commit_Status_Control__c</fullName>
    <label>Commit Status Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Radio Button</fullName>
            </value>
            <value>
                <fullName>5 Stars</fullName>
            </value>
            <value>
                <fullName>Scale 1 a 5</fullName>
            </value>
            <value>
                <fullName>Scale 1 a 10</fullName>
            </value>
            <value>
                <fullName>Multi-select Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>