force-app/main/default/objects/WorkStep/fields/CoIT_WPS_Commit_Status_Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WPS_Commit_Status_Multi_Select__c</fullName>
    <label>Commit Status Multi-Select</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Superior</fullName>
            </value>
            <value>
                <fullName>Inferior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>