force-app/main/default/objects/WorkStep/fields/CoIT_WPS_Commit_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WPS_Commit_Status_Type__c</fullName>
    <label>Commit Status Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Responsable</fullName>
            </value>
            <value>
                <fullName>Si/No</fullName>
            </value>
            <value>
                <fullName>Bueno/Malo</fullName>
            </value>
            <value>
                <fullName>E 1/4 1/2 3/4 F</fullName>
            </value>
            <value>
                <fullName>Superior/Medio/Inferior</fullName>
            </value>
            <value>
                <fullName>Semaforo</fullName>
            </value>
            <value>
                <fullName>Scale 1 a 5</fullName>
            </value>
            <value>
                <fullName>Scale 1 a 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>