force-app/main/default/objects/WorkStep/fields/CoIT_WPS_Open_Answer__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WPS_Open_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Answer</label>
    <type>Checkbox</type>
</CustomField>