force-app/main/default/objects/WorkStep/fields/CoIT_WPS_Open_Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WPS_Open_Answer_Type__c</fullName>
    <label>Open Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>tel</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>