force-app/main/default/objects/WorkStep/fields/CoIT_WPS_Upload_File__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WPS_Upload_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload File</label>
    <type>Checkbox</type>
</CustomField>