force-app/main/default/objects/WorkStep/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <label>Decision FLow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Answer</fullName>
            </value>
            <value>
                <fullName>Measurement</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>